<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Projemanaj</string>
    <string name="image_contentDescription">task image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projmanag\'s Minimal Interface</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="please_wait">Please wait…</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="my_profile_title">My Profile</string>
    <string name="profile_update_btn_text">update</string>
    <string name="et_hint_mobile">Mobile</string>
    <string name="fab_contentDescription">add button for creating cards</string>

    <!-- for create board strings-->
    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>
    <string name="board_image_contentDescription">Board image</string>
    <string name="no_boards_are_available">No Boards are available!!!</string>

    <!-- item task activity strings -->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    
<!-- members activity strings -->
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>
    <string name="error_message_member_search">No such member found</string>
    
    <!--card details activity -->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\' ? </string>
    <string name="selcted_label_color_title">Select Label Color</string>
    <string name="str_select_member_title">Select Member</string>


    <string name="default_notification_channel_id">projemanaj_channel_id</string>


</resources>