<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        android:elevation="@dimen/dialog_member_cv_elevation"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_content_padding">

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_member_title_padding"
                android:text="@string/search_member"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_member_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:background="@color/divider_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/member_dialog_til_email_marginTop">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_search_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/white"
                    android:hint="@string/email"
                    android:textSize="@dimen/member_dialog_et_email_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>